2017-08-09  Slava Barinov  <v.barinov@samsung.com>

	* g++.dg/asan/asan.exp: Switch on *.cc tests.

2017-08-09  Marek Polacek  <polacek@redhat.com>

	PR c/81233
	* gcc.dg/diagnostic-types-1.c: New test.
	* gcc.dg/assign-warn-1.c: Update warning messages.
	* gcc.dg/assign-warn-2.c: Likewise.
	* gcc.dg/c90-const-expr-5.c: Likewise.
	* gcc.dg/c99-const-expr-5.c: Likewise.
	* gcc.dg/conv-2.c: Likewise.
	* gcc.dg/init-bad-7.c: Likewise.
	* gcc.dg/overflow-warn-1.c: Likewise.
	* gcc.dg/overflow-warn-2.c: Likewise.
	* gcc.dg/overflow-warn-3.c: Likewise.
	* gcc.dg/overflow-warn-4.c: Likewise.
	* gcc.dg/pointer-array-atomic.c: Likewise.
	* gcc.dg/pr26865.c: Likewise.
	* gcc.dg/pr61162-2.c: Likewise.
	* gcc.dg/pr61162.c: Likewise.
	* gcc.dg/pr67730-2.c: Likewise.
	* gcc.dg/pr69156.c: Likewise.
	* gcc.dg/pr70174.c: Likewise.
	* objc.dg/proto-lossage-4.m: Likewise.

2017-08-09  Marek Polacek  <polacek@redhat.com>

	PR c/81417
	* Wsign-compare-1.c: New test.
	* gcc.dg/compare1.c: Adjust dg-bogus.
	* gcc.dg/compare2.c: Likewise.
	* gcc.dg/compare3.c: Likewise.
	* gcc.dg/compare7.c: Likewise.
	* gcc.dg/compare8.c: Likewise.
	* gcc.dg/compare9.c: Likewise.
	* gcc.dg/pr11492.c: Likewise.

2017-08-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/81523
	* gcc.dg/pie-7.c: New test.
	* gcc.dg/pie-static-1.c: Likewise.
	* gcc.dg/pie-static-2.c: Likewise.

2017-08-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81708
	* gcc.target/i386/stack-prot-guard.c: New test.

2017-08-08  Tamar Christina  <tamar.christina@arm.com>

	* gcc.target/aarch64/xorsign.c: New.
	* gcc.target/aarch64/xorsign_exec.c: New.
	* gcc.target/aarch64/vect-xorsign_exec.c: New.

2017-08-08  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/81354
	* g++.dg/torture/pr81354.C: New file.

2017-08-08  Richard Biener  <rguenther@suse.de>

	PR middle-end/81719
	* g++.dg/tree-ssa/pr81719.C: New testcase.

2017-08-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81723